--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.26.1",
+    "styled-components": "^6.1.19",
     "three": "^0.179.1",
     "three-stdlib": "^2.36.0",
     "troika-three-text": "^0.52.4",
